# google-cloud-professional-data-engineer-practice

./: README.md
03-building-batch-data-pipelines/executing-spark-on-dataproc/: .gitignore  Makefile  pyproject.toml
03-building-batch-data-pipelines/executing-spark-on-dataproc/executing_spark_on_dataproc/: __init__.py
